@@ -1,3 +1,10 @@
+Sun Oct 17 14:58:42 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* riscos_c.c, main.c, main.h (option_dde): Remove @/Prefix$Dir hack.
+	* main.c: Improve -ver/-version output.
+	Support "asasm <asmfile> <objfile>" syntax. Better protection against
+	missing input or output filename.
+
 Sun Oct 17 05:40:33 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/operator_multiplication.s: Added.  Tests
